fix scroll bar by adding overflow-x hidden on globals.css

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,3 +69,13 @@ body {
 .gradient-bg {
   background: linear-gradient(90deg, var(--primary), var(--secondary));
 }
+
+html,
+body {
+  overflow-x: hidden;
+  max-width: 100vw;
+}
+
+.container {
+  max-width: 100%;
+}
